Refactor Arabic dictionary HTML structure

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 <h3 className="text-xl font-bold text-amber-900 mb-4">كيفية الاستخدام</h3>
                                 <ul className="space-y-2 text-gray-700">
                                     <li>• اكتب الكلمة التي تريد البحث عنها في المربع أعلاه</li>
-                                    <li>• يحتوي القاموس على {Object.keys(dictionaryData).length} كلمة</li>
+                                    <li>•  -  {Object.keys(dictionaryData).length} Now</li>
                                     <li>• يمكنك البحث بجزء من الكلمة لرؤية جميع الكلمات المطابقة</li>
                                 </ul>
                             </div>
@@ -185,5 +185,6 @@
 </body>
 </html>
 ```
+
 
 
