--- a/index.html
+++ b/index.html
@@ -87,7 +87,189 @@
                 'رضرض': 'الرَّضْراضْ: القَطْرُ من المَطَر الصِّغارُ.',
                 'ردم': 'المِرْدامُ: القَلِيلُ الخَيرْ.',
                 'رقق': 'الرَّقِيقان: ما بين الخاصِرَة والرُّفْعِ.',
-                'ربح': 'أَرْبَحَ النَّاقَةَ: حَلَبَها غُدْوَةً ونصفَ النَّهار، يُقال أَشْلِ لا تُرْبِحْ، أي أَبْقِ لا تَعصِرْ.'
+                'ربح': 'أَرْبَحَ النَّاقَةَ: حَلَبَها غُدْوَةً ونصفَ النَّهار، يُقال أَشْلِ لا تُرْبِحْ، أي أَبْقِ لا تَعصِرْ.',
+                'صنع': 'الصَّنِيعُ: العُشُّ الذي ليسَ فيه بَيضٌ.',
+                'صوى': 'أَخَذَه بصُواه: أي بطَراءَتِه.',
+                'صند - صندع': 'الصِّنْدِدُ والصِّنْدِعَةُ: حَرْفٌ حَدِيدٌ مُنْفَرِدٌ من الجَبَل.',
+                'صقعر': 'اصْقَعَر الجَرادُ: إذا أَصابَتْهُ الشَّمْسُ فذَهب.',
+                'صدح': 'الصَّدَحُ: المكان الخالِي.',
+                'صمو': 'أَصْمَتِ الأَرضُ: إذا أَحالَت آخِرَ حَوْلَيْنِ، وكانت ذاتَ صَبَرةٍ.',
+                'صبر': 'والصّبَرَة من البَوْل والأَخْثاءِ في الأَرْضِ إذا غَلُطَ وصَبَرةُ الحَوْضِ: ما تَلَبَّدَ فيه مِن البَوْلِ، والسِّرْقِين، والبَعَرِ.',
+                'صمم': 'ناقةٌ صَمَّاءُ: أي سَمِينة.',
+                'صرف': 'الصَّرْفانِ: عُودا السَّرْجِ اللَّذانِ يُجْلَسُ عليهِما.',
+                'صيق': 'الصِّيقُ - في لغةِ أَهل المَدِينة - الأَحمرُ الذي يكونُ في قَلْبِ النَّخْل.',
+                'صكم': 'الصكَّم: الأَخْفاف.',
+                'صنق': 'الصِّناقُ: الجَمَلُ البَعيدُ الصَّوْتِ في الهَدْرِ.',
+                'صلت': 'الصِّلتُ: - الصادُ قبلَ اللام -: اللِّصُّ بلغَةِ الأَزدِ، مقلوبُ اللِّصْت.',
+                'عهد': 'إذا حُصِدَ الزَّرْعُ سُمِّيَ كُلُّ واحِد مما يَضَعُونَ على الأَرض إذا حَصَدُوا العَهْدَ، والجمعُ العُهودُ.',
+                'صفر': 'الصُّفَّارُ والصَّنَمَةُ: قَصَبَةُ الرِّيشِ كُلُّها.',
+                'صلصل': 'الصَّلْصالَةُ: أَرْضٌ ليسَ بها أَحَد.',
+                'صور': 'الصَّوْرُ: اللِّيتُ.',
+                'صرر': 'الصُّرّانُ: ما نَبَت. بالجَلَدِ من شَجَرِ العِلْكِ [والأُمْطِيِّ].',
+                'صقل': 'الصَّقِيلُ: الصَّغِيرُ البَطْن.',
+                'ضهب': 'ضَهَبَ الرَّجُلُ ضُهُوباً: إذا أَخْلَفَ وضَعُفَ، ولم يُشْبِه الرِّجالَ.',
+                'ضمغ': 'ضَمَعْتُ الجلْدَ بَلَلْتُه بَلَّةً [ويُقال]: بُلَّهُ حتى يَنْضَمِغَ، أي يَبْتَلَّ [إذا كان يابساً].',
+                'ضرس': 'الضَّرِيُس: التَّمْرُ، والبُسْرُ، والكَعْكُ، تقولُ: أَضْرسْنا من ضَرِيِسِكَ هذا.',
+                'ضأَل': 'ضَأَلَه: حَقَرَه.',
+                'ضيف': 'أضَفْتُ عليه: أَشْرَفْتُ عليه. وأَضافَ: عدا.',
+                'ضبن': 'الضِّبِنُ: ما أَعْياهُم أَن يَحْفِرُه.',
+                'ضجع': 'الضَّجُوع من الآبار: الدَّحُولُ، أَي ذاتُ تَلَجُّف إذا أَكَلَ الماءُ جرابَها.',
+                'ضلل': 'ضَلِّلْ ماءَك: أي سَرِّحْه [في البلاد].',
+                'ضرر': 'الضَّرَرُ: شَفا الكَهْفِ يقالُ: لا تَمْشِ على هذا الضَّرَر؛ لا يَنْهَزْ بك.',
+                'ضمد': 'الضَّمَدُ: القومُ الذين لَيْسَت لهم حِرْفَةٌ، ولا شَيْءٌ يَعِيشُونَ به.',
+                'صنود': 'الضَّوادِي: الكَلامُ القَبيحُ. قال النَّظار: غُلامَيْن من أَولادِ عَمِّيَ شُبِّلاَ ... بِفِعْل النَّدَى لا يَنْطِقان الضَّوادِيَا.',
+                'ضَرأَ': 'انْضَرَأَتِ الإِبلُ: مَوَّتَتْ. وانْضَرأَ نَخْلُهم: مات والشَّجَرُ: مَوَّتَت.',
+                'طيط': 'طاطَ مِنْكَ يَطيطُ: إِذا مَلَّ مِنْك.',
+                'طملخ': 'الطَّمالِيخُ: السَّحابُ البيضُ الرَّقِيقَة.',
+                'طحلب': 'طَحْلَبُوا إِبلَهُم جميعاً، وغَنَمَهُم، أي جَزُّوها.',
+                'طرمس': 'الطِّرْمِساءُ والطِّمْرِساءُ: الهَبْوَةُ بالنَّهارِ.',
+                'طلو': 'الطُّلاّءُ: طُلاوَةُ الدَّمِ، أي قِشْرَتًه.',
+                'طلل': 'هذه أرضٌ قد تَطَلَّلَتْ، أي نَبَتَت وتَجَبَّرَتْ، ولم يَطَأْها أَحَدٌ.',
+                'طبب': 'طَبَبْتَ، تَطِبُّ، مثل: دَبَبْتَ تَدِبُّ: لغةٌ في طَبِبْتَ تَطَبُّ.',
+                'طعثن': 'غَنَمٌ طَعْثَنَةٌ أي كَثِيرةٌ.',
+                'طرق': 'الأَطِرقاءُ: الطُّرُقُ.',
+                'طله': 'طَلَهَ في البلادِ يَطْلَهُ طَلْهاً: ذَهَبَ فيها.',
+                'طسل': 'التَّطَيْسُل: التَّنَكُّرُ.',
+                'طون': 'طُوَانَةُ: موضِعٌ.',
+                'ظفر': '[الأُظْفُورُ]: الدَّقِيقُ الذِي يَلتْوِي على القَضِيب من الكَرْم. [الظَّرْءُ]: الماءُ يَجْمُدُ والتُّرابُ إذا يَبِسَ بالبَرْدِ.',
+                'ظلم': 'ما ظَلَمَنِي أَن أُسالِمَ بَنِي فُلان ولَيْسُوا أَهَل ذاك، أي ما حَمَلَني.',
+                'علكد': 'العِلْكَدُّ: الشَّحْمُ.',
+                'عيل': 'العَيْلَي: التِي تَبْكِي على المَيِّتِ.',
+                'عقر': 'العَقْراءُ المُشْرِفَةُ من الرَّمْلِ المُرْتَفِعَةُ، من الأَرْضِ.',
+                'عند': 'العُنْدَدُ: القَدِيم.',
+                'عطل': 'العَطْيَلُ: الهَضْبَة.',
+                'عرن': 'عَرَنَ يَعْرُنُ: أَي مَرَوَن، وعَصاً عارنَةٌ، أي مارنَةٌ. والعُرْنَةُ: إذا جَمَع الزَّرْعَ، وهي العِرانُ.',
+                'عوذ': 'المُعَوَّذ: مَرْعَى الإِبِل حَولَ البُيُوتِ.',
+                'عقب': 'المُعْقِبُ: الكالُّ المُعْيي [من الإِبل] يقال: قد أَعْقَبَت راحِلَتْكَ.',
+                'علط': 'شاعِرٌ عالِطٌ، وما أَعْلَطَه! أَي ما أَنْكَرَه!.',
+                'عشم': 'عَشَمَ بَعٍيُركَ: إِذا أَخَذَ فيه السِّمِنُ.',
+                'عبد': 'العَبْدُ: النَّصْلُ القَصِيرُ العَرِيضُ.',
+                'عسم': 'الاعْتِسام: أَن تَأْخُذَ الخُفَّ الخَلَق، أَو النَّعْلَ الخَلَقَ [أو الثَّوبَ الخَلَق]، فتُصْلِحَه وتَلْبَسَه.',
+                'عظل': 'التَّعَظُّل: أَنْ يَتْبَعُوا الشَّيءَ قد فاتَهُم، يُقال: ظَلَّ يَتَعَظَّلُ في أثَرِه منذُ اليَوْمِ.',
+                'عمر': 'العَمائِر: رُؤُوسُ جبال برَقَّة سَهْلَة، الواحدَةُ عِمارَةٌ، والعِمارَةُ: رُقْعةٌ مُزَيَّنَةٌ تُخاطُ في المِظَلَّة.',
+                'عقد': 'العَقْداءُ: الأَمَة.',
+                'عضض': 'العُضُّ: الشَّعِيرُ والحِنْطَة لا يَشْرَكُهما شيءٌ، يقالُ: قد عاثُوا العُضَّ زَماناً: إذا لَزمُوه لم يَأْكُلوا غيرَه.',
+                'عطب': 'العُوْطَبُ: شجر. والمُعطِبُ: المُقْتِرُ. وعَطِبَ عليه: إذا اشْتَدَّ غَضَبُه.',
+                'عقو': 'عُقاُة بنُ شُمْس، ومَعْوَلَةُ بنُ شُمْس، وحُدّانُ.',
+                'عقفر': 'العَنْقَفيِرُ من الإِبل: التي تَكْبَرُ حتى يكادَ قَفاها يَمَسُّ كَتِفَيها من تَقاعُسِ رَأْسِها وعُنُقِها. والعَنْقَفِيرُ: العَقْرَبُ.',
+                'عجن': 'العَجْناءُ من الإِبل: التي تَدِلَّى ضرَّتُها، وتَلْحَقُ اطْباؤُهاً، فَتَرْتَفعُ في أَعالي الضَّرَّةِ.',
+                'عبى': 'هذا عَبُّيكَ من هذه الجَزُورِ، أَي نَصِيبُك. والتَّعابِي: أن يَمِيلَ رَجُلٌ مع قَوْم، والآخَرُ مع قوم آخَرين.',
+                'عدى': 'تَعَدَّ هذا، أي خُذْهُ إِلَيكَ، وقد تَعَدَّى فلانٌ مَهْرَ فُلانةَ، أي أَخَذَه.',
+                'عوف': 'نَعِمَ عَوْفُك، أي طَيْرُك.',
+                'عقرب': 'إِنه لذُو عُقْرُبانَة، إذا كانَ نَصُوراً مَنِيعاً، وإنِّه لمُعَقْربٌ.',
+                'عجر': 'العَجَوْجَرُ: الضَّخْمُ العِظامُ. واعْتَجَرَت فُلانةُ بجاريَةِ أو غُلام، وذلك إذا وَلَدَتْ بعدَ يَأسٍ من الوَلَدِ.',
+                'عرجن': 'العُرْجُونُ مثلُ الفُطْر، أَو فَسْوَةِ الضَّبُعِ. والمُعَرْجَنُ: الذي قَد طُلِيَ بالدَّم، أو بالزَّعْفران، أو بالخِضاب.',
+                'عذل': 'اعْتَذَل الفَرسُ: أَسْرَعَ بعدَ البْطْءِ، وجَدَّ.',
+                'علق': 'عَلِّقْ لناقَتِكَ أي امْشِ عنها.',
+                'عسب': 'اسْتَعْسَبَتْ نفسِي منه، أي كَرِهْتُهُ.',
+                'عسس': 'دَرَّتْ عِساساً، أي كَرْهاً، وهي العَسُوسُ من الإِبل.',
+                'عكد': 'أَعْكَدَ الظَّبْيُ إلى مكانٍ يَمْتَنِعُ به، أَي الْتَجَأَ وتَحَصَّنَ.',
+                'عجل': 'العَجَلَةُ: الصَّخْرَةُ تَنْبُتُ وَحدَها بالشَّأْزِ.',
+                'عدس': 'ما بفُلانٍ مَعْدَسٌ، أي مَطْمَعٌ. وعَدَسَ يَعْدِسُ، أي: خَدَمَ.',
+                'عرب': 'اسْتَعْرَبَت البَقَرةُ: إذا اشْتَهَت الفَحْلَ، وأَعْرَبها الثَّوْرُ.',
+                'عضد': 'العَضادُ من المَعَزِ: إِذا فُطِمَ عن أُمِّه. ورَمى فأَعْضَدَ: إذا ذَهَب يَمِيناً وشِمالاً.',
+                'عسكب': 'العِسْكَبِةُ: العُنَيِقِيدُ فيه عَشْرُ حَبّات، ذكَرَها بالكاف.',
+                'عشش': 'العَشُّ، من الإِبل: الفَحْلُ الَّذِي يُبْصِرُ ضَبَعَةَ النّاقَةِ ولا يَظْلمُها.',
+                'عنقاء': 'العَنَقَةُ الذي يَضْربُه الماءُ فيدِيرُ الرَّحَى.',
+                'عنف': 'والعَنَفَة: ما بين خَطَّيِ الزَّرْع.',
+                'عرهن': 'العَراهِين: ضربٌ من العَراجِينِ، وهو طوِيلٌ يُؤكَلُ.',
+                'علفت': 'العِلْفَتانِي: الجَسَيمُ الأَحمَقُ.',
+                'عنق': 'عَنَّقَت اسْتُه: إذا خَرَجَتْ.',
+                'عقب': 'العَقَابُ: الرابِيَةُ، وكلُّ شيءٍ مرتفع إذا لم يَكُن طَوِيلاً جِدّاً.',
+                'عتق': 'أَعْتَقَ قَلِيبَه: إذا حَفَرَها وطَواها وأَجَادَها.',
+                'عفه': 'عَفَهُوا يَعْفَهُونَ عُفُوهاً، أي طَبَّقُوا.',
+                'عثل': 'العَثَلُ: الذي جُبِرَ من كَسْرِه وفيه عُقْدَةٌ، يقال: عَثَلَ يَعْثِلُ.',
+                'عضرس': 'العَضْرَسُ: الظَّرِبُ الصَّغِيرُ.',
+                'عسن': 'أَعْسانُ الأَرضِ: بقِيَّةُ الحَطَب وجَذُولُه إذا أَجدَبَت.',
+                'عتر': 'العِتْوارَةُ: الرَّجُلُ القَصِيرُ.',
+                'عبك': 'العَبَكَةُ: العُقْدَة التي تَكَونُ في الحَبْل، فيَبْبلىَ الحَبْلُ، وتَبْقَى العَبَكَةُ.',
+                'عدل': 'رَجُلٌ عُدْلَة، وقَومٌ عُدْلَة، أي عَدْلٌ.',
+                'عند': 'العُنْدَةُ: العَزيزُ النَّفْسِ.',
+                'عظم': 'المَعْظُوم من الفُصْلانِ: الذي يُكْسَرُ عَظْمٌ في لسانِهِ، ثم يُتْرَكُ لئَلاّ يَرْضَعَ.',
+                'عرض': 'المُعَرِّضُ: الذي يَخْتُنُ الصَّبيَّ.',
+                'عيث': 'تَعَيّثَت الإبلُ: إذا شَرِبَتْ دُونَ الرِّيّ.',
+                'عرس': 'عَرَسَ عَنِّي: عَدَل عني.',
+                'عود': 'العُودُ: العَظْمُ في أَصْلِ اللِّسان، وهو عُودُ اللِّسانِ.',
+                'عدن': 'العَدَنُ: الفّسادُ في الشَّجَر، يقالُ: عَدَنَ يَعْدِنُ بالفَأسِ أو بغَيرها.',
+                'عتد': 'تَعَتَّدَ فلانٌ في صَنْعَتِه: إذا تَنَوَّقَ.',
+                'عفف': 'العِفافُ: الدَّواءُ، يقال: بأيِّ شَيْءٍ تَتَعافُّ؟ أي تَتَداوَى.',
+                'عذم': 'العَذِيمَةُ، من النَّخْل: التي تَحْمِلُ فَلا يَكُونُ لحَمْلها نَوىً.',
+                'عرمس': 'العَرَمَّسُ: الماضي الظَّريفُ.',
+                'عرق': 'العِراقُ: حرْفُ الرِّيشِ.',
+                'عنبج': 'العُنابِج: الجافِي.',
+                'غمط': 'الاغْتِماطُ: أَنْ يَخْرُج الشيءُ فلا يُرَى له عَيْنٌ ولا أَثَرٌ.',
+                'غلق': 'العَلْقُ: السِّقاءُ الثَّغِلُ.',
+                'غيل': 'الغَيِّلُ من الأَرضِ: الذي تَراه قَريباً وهو بَعِيدٌ. وثَوْبٌ غَيِّلٌ: واسِعٌ.',
+                'غبب': 'غَبَّبَ الذِّئْبُ الشّاةَ: إذا أَخَذَ بحَلْقِها وَنَيّبَ فيه.',
+                'غمد': 'الغامِدَةُ: الْبِئْرُ المُنْدَفِنَة.',
+                'غيض': 'الغِيضُ: العَجَمُ الذي لم يَخْرُجْ من لِيفِه، فذاك يُؤْكَلُ كُلُّه.',
+                'غير': 'الغِيارُ: أَعْلَى الجَبَل.',
+                'غزز': 'غَزُّوا بإبلهم: إذا عَلَّقُوا عليها العُهُونَ من العُيَون.',
+                'غطط': 'إِنه لذُو غَطَوَّطانٍ، أي مَنَعَةٍ وكَثْرة.',
+                'غسف': 'الغَسَفُ: الظُّلْمَةُ، وأَغْسَفْنا: أَظلْمنا.',
+                'غرر': 'الطَّيْرُ أَجْنِحَتها فقد غَرَّرتْ.',
+                'غذو': 'الغَذَوانُ: السَّلِيطُ الذي يَشْتِمُ الناسَ، والمَرأَةُ غَذَوانَةٌ.',
+                'غلو': 'الغَلانِيَةُ التَّغاليِ بالشَّيءِ.',
+                'غيف': 'الغَيْفانِ: المَرِحُ، كالغَيَّفان.',
+                'غرث': 'غَرِثَ بنو فُلان بإِبلِ فُلانِ، أي أَخَذُوها ظُلْماً وغَشَمُوها. ويَقولُ الرَّجلُ للرَّجُل: ويْلَك! غَرِثتَ بي، وترَكْتَ حَقّكَ.',
+                'غشم': 'الغَشَمُ من الهِناءِ: ألا تَتْرُكَ منه شَيئاً إِلاَّ هَنَأْتَه.',
+                'غمل': 'الغِمْلُ: شَجَرة من الحَمْضِ تَنْبُتُ يعلُوهَا ثَمَرٌ أَبيضُ كأَنه المُلاءُ.',
+                'غلل': 'الإِغْلالُ: أن تَحْلُبَ النَّاقَةَ وبَقِيَ في ضَرْعِها لَبَنٌ.',
+                'غفر': 'الغِفارةُ: مثلُ الإِزارِ من الصُّوفِ مَنْسُوجٌ بيضاءُ أَو سوداءُ.',
+                'غيث': 'الغَيْثُ: أَن يكونَ عَرْضُه بَريداً.',
+                'غور': 'التَّغْوِيرُ: الهَزيَمةُ والطَّرَدُ.',
+                'غضفر': 'الغَنَضْفَرُ: الغَلِيظُ، كالغَضَنْفَرِ.',
+                'غمى': 'الغامِياءُ: من جحَرَةِ اليَرْبُوع، وهو أَن يَخْرُجَ اليَرْبُوعُ من حُجْرٍ له صَغِيرٍ، ثم يَغْمِى على فمِ حُجْره.',
+                'غول': 'الغَوالِين: التي تُشْبه الضُّلُوعَ في السَّفينةِ، الواحِدُ غَوْلان.',
+                'غنظ': 'الغَنِيظُ: البُسْرُ يُقْطَعُ من النَّخْل بعدما يَصْفَرًّ، أَو يَحْمَرُّ.',
+                'غطرف': 'العِطْرَوْفُ: الشابُّ الظَّريفُ.',
+                'فرو': 'الفَرا، الفَرُّوجُ ووَلَدُ الدَّبَى.',
+                'فشأَ': 'تَفشَّأُت به: سَخِرتُ منه.',
+                'فثأَ': 'افْثَئوا له: إذا كانَ شاكِياً، ولم يَقْدِرِ على حَمّام عَمَدوا إلى حِجارَة فأَحْمَوْها، ورَشَّوا عليها الماءَ.',
+                'فثث': 'ما افْتُثَّ بنو فُلانٍ قَطُّ، أي ما قُهِرُوا [قَطُّ].',
+                'فند': 'فَنَّدْتُه عن الأَمر تَفْنِيداً: أَرَدْتُه عليه.',
+                'فهفه': 'إن فُلاناً لفَهْفاهٌ على المالِ: إذا كانَ حَسَنَ القِيامِ عليهِ.',
+                'فرند': 'الفِرِنْد: حَبَّ الرُّمّان.',
+                'فرض': 'الفِرْضُ: ثَمَر الدَّوْمةِ ما دامَ أَحْمَرَ.',
+                'فصص': 'فَصَّ الصَّبِيُّ يَفِصُّ فَصِصاً، وهو البُكاءُ الضَّعِيفُ.',
+                'فحح': 'لها فُحَّةٌ كفُحَّة الفُلْفلِ وهي حَرارَتُها.',
+                'فرى': 'الفَرِيُّ: الحَلِيبُ ساعةَ تَحْلُبُه.',
+                'فثج': 'فَثَجَ، وفَثَّجَ: أَثْقَلَ.',
+                'فثى': 'أَفْثَى: أَعْيا.',
+                'فقأَ': 'فَقَأْتُ ناظِرَيْه: أذْهَبْتُ غَضَبَه.',
+                'فلحس': 'الفَلْحَسَةُ اللُّوْمُ.',
+                'فرس': 'أَفْرَس عن بَقيَّة مال فُلان: إذا أَخَذَه وتَرَكَ منه بَقِيَّة.',
+                'فصى': 'أَفْصَيْنا: أي أَضْحَيْنا.',
+                'فيج': 'الفَيْجُ من الأَرْضِ الوَهْدُ المُطْمَئِنُّ.',
+                'فرط': 'فَرَطَت النَّخْلَةُ: إذا تُرِكَتْ فلم تُلْقَحْ، حَتى يَعْسُو طَلْعُها.',
+                'فلل': 'أَفلّهُم الدَّهْرُ أي أَذْهَبَ أَمْوالَهُم.',
+                'فجى': 'تَفْجِيَةُ البَقْلِ: أن يَكْسِرَهُ المالُ.',
+                'فدى': 'الَّلهُمَّ فَدِّ عَلَينا بفُلان: الَّلهُمُ عافِه، الَّلهُمَ اَئْتِنا به.',
+                'فرج': 'المُفْرِجُ: الذي كانَ حَسَن الرَّمْىِ، ثم يُصْبحُ يوماً قد تَغَيَّرَ رَمْيُه.',
+                'فوج': 'فاجَتِ الشّمْسُ عند بَرْدِ النَّهارِ. وفاجَ النَّهار: بَردَ.',
+                'فرق': 'الفُرْقانُ: السّحر، وقيلَ: الصُّبْح.',
+                'فحو': 'الفَحْواءُ: فَحَا القِدْر.',
+                'فرغ': 'الفِراغُ: العِدْلُ من الأَحْمالِ، بلغة طَيِّئٍ.',
+                'قبس': 'الأَقْبَسُ: الذي تَبْدُو حَشَفَتُه قبلَ أَنْ يُخْنَنَ.',
+                'قعط': 'المُتَقَعِّطُ الرَّأْسِ: الشَّديدُ الجُعُودَةِ. والمقُعَّطُ: الحِمْلُ إذا كانَ مُرْتفِعاً على الدابَّة.',
+                'قبض': 'القُبَّضُ: دابَّةٌ تُشْبه السُّلحفاةَ، وهو دُوَيْنَ القُنْفُذِ إلاَّ أَنَّه لا شَوْكَ له.',
+                'قطِب': 'قَطَبَه يَقْطِبُه: أَغْضَبَهُ، وقالَ له ما لاَ يَشْتَهي.',
+                'قبب': 'القَبُّ: الفَحْلُ من الإِبل، ومن النَّاسِ.',
+                'قمر': 'القَمَرُ: قبيعَةُ السَّيْفِ.',
+                'قرد': 'القَرَدَةُ: السَّعَفَةُ إذا سُلِبَ خُوصُها.',
+                'قفف': 'القُفافُ: الَّذِي فيه القُطْنُ، وهو الجَوْزَقُ.',
+                'قصب': 'القَصُوبُ من الغَنَم: التي تَجُرُّها [قبل حقٍّ جِزازها].',
+                'قصص': 'أَقَصَّ هذا البَعِيرُ هُزَالاً، وهو الَّذي لا يَسْتَطِيعُ أن يَنْبَعِثَ.',
+                'قبح': 'القَبَاحَةُ: رأسُ العَضُدِ في الكَتِف.',
+                'قلحم': 'شَيْخٌ قِلحامَةٌ: هَرمٌ.',
+                'قسر': 'هذه مُقَيْسِرةُ بني فُلان، وهي الإِبِلُ المَسانُّ.',
+                'قهقهر': 'القُهْهُور: شَيْءٌ يَبْنِيه الصِّبْيانُ من حِجارَة، طَويلٌ، حَجَرٌ فوقَ حَجَرٍ.',
+                'قوقس': 'المُقَوْقِسُ: طائِرٌ مُطَوَّقٌ طًوْقاً - سَوادٌ فِي بياضِ - يُشبه الحَمَامَ.',
+                'قعو': 'قَعا فُلانٌ نَعَمَه: إذا سِيقتْ وجُمِعَتْ، يقْعَى قعْواً.',
+                'قوع': 'تَقَوُّعُ الإِنسان: أَنْ تَرَاهُ لا يَسْتَقِيمُ في مِشْيَتِه. وقاعَ الكَلبُ يَقُوعُ قَوَعاناً: إذا ظَلَعَ.',
+                'قرو': 'شأةٌ مقْرُوَّةٌ وهو أَنْ يُجْعَلَ رأَسُها في خَشَبة لها مثلُ العُرْوَةِ.',
+                'قوى': 'الأَقْتِواءُ: المَعْتَيَةُ.',
+                'قسقس': 'رشاءٌ قَسقاس، أَي جيِّدٌ.'
             }), []);
 
             const searchResults = useMemo(() => {
@@ -185,6 +367,7 @@
 </body>
 </html>
 ```
+
 
 
 
