--- a/index.html
+++ b/index.html
@@ -269,7 +269,241 @@
                 'قوع': 'تَقَوُّعُ الإِنسان: أَنْ تَرَاهُ لا يَسْتَقِيمُ في مِشْيَتِه. وقاعَ الكَلبُ يَقُوعُ قَوَعاناً: إذا ظَلَعَ.',
                 'قرو': 'شأةٌ مقْرُوَّةٌ وهو أَنْ يُجْعَلَ رأَسُها في خَشَبة لها مثلُ العُرْوَةِ.',
                 'قوى': 'الأَقْتِواءُ: المَعْتَيَةُ.',
-                'قسقس': 'رشاءٌ قَسقاس، أَي جيِّدٌ.'
+                'قسقس': 'رشاءٌ قَسقاس، أَي جيِّدٌ.',
+                'قرصع': 'إذا ارْتحل القَومُ، فلم يَسِيرُوا إلاَّ قليلاً حتى يَنْزِلُوا، قيل: ما أَسْرَع ما قَرْصَ\' هؤلاءِ.',
+                'قصد': 'اتْبَعْ قَصِيدَ القَوْمِ: أي أَثرهُم. والقَصَدُ: الجُوعُ وقد تَقَصَّدَت الدَّوابُّ: إذا جاعَتْ.',
+                'قلص': 'قَلَصَ يَقْلِصُ: إذا وَثَبَ.',
+                'قبل': 'القبَلِيُّونَ من النَّاسِ: ما كانُوا قريباً من الرِّيفِ. والقبَل: شيءٌ من عاج يُعلَّقُ على الخَيْلِ والغِلْمانِ.',
+                'قنو': 'قَناءُ الرَّمْلِ، وقَناءُ الجَبَلِ، والحائِطِ، هو الجانِبُ الَّذِي يَفِيءُ عليه الفَيْءُ.',
+                'قدم': 'قَدَّمْتُ يَمِيناً: حَلَفْتُ، وأَقْدَمْتُ فُلاناً: أحْلَفْتُه.',
+                'قرر': 'قَرَّت الحيْةُ تَقِرُّ قَرِيراً: صَوَّتَتْ.',
+                'قند': 'جاءَ بالأَمْرِ على قنادِيدِه، أي عَلَى وجْهه.',
+                'قضم': 'أَقْضَمَ القومُ: امْتارُوا شيئاً قليلاً [وهو القَضَمُ] في السَّنَةِ الشَّدِيدةِ والعُسْرَةِ.',
+                'قشب': 'القَشِيبُ: الأَبيضُ.',
+                'قفر': 'القَفَرُ: الثَّوْرُ إذا عُزِلَ عن أُمِّهِ حتى يُحْرَثَ به، وهو التَّبِيعُ.',
+                'قضض': 'القِضَّةُ: الجِنْسُ. وجاءُ وابقِضِّهم، - بالكَسْر -: لغة في قَضِّهم، بالفَتْحِ.',
+                'قيض': 'القِيضَةُ: القِطْعَةُ من العَظْمِ الصَّغِيرة، والجَمْع القِِيضُ.',
+                'قوم': 'أَكلْتُ طَعاماً ما كانَ له قَوامٌ: أي جُزْءٌ. وقَوَامُ القَوْم: ما يُعِيشُهُم.',
+                'قبص': 'حَبْلٌ مُتَقِّبصٌ: إذا كان مُتطَوِّياُ لم يُمَدَّ.',
+                'قرى': 'القِرى: اللَّبَنُ الخاثِر لم يُمْخضْ. واستَقْرَى الدُّمَّلُ صارَتْ فيه مِدَّةٌ.',
+                'قرق': 'القَرْقاءُ: الهَضْبَةُ.',
+                'قمل': 'القَمَليّةُ: التي تأْكُل بجمِيعِ أَصابعها.',
+                'قذذ': 'قَذَّه: طَرَدَه طرْداً شَديداً.',
+                'قرو': 'المُقْرَوْرِي: الطَّويلُ الظَّهْر. وشأةٌ مقْرُوَّةٌ وهو أَنْ يُجْعَلَ رأَسُها في خَشَبة.',
+                'قدد': 'اسْتَقَدَّت الإِبِلُ إذا اسْتَقَامَتْ على وَجْهِ واحد.',
+                'قرمص': 'القُرمِصُ: اللَّبنُ القارِصُ.',
+                'قرد': 'قِرْديدَةُ الجبَلِ: أَعلاهُ. وقِرْدَ يدَهُ الرَّجُلِ: رَأْسُه.',
+                'قنأَ': 'قَنِيءَ الأَدِيمُ: فسَد، وأَقْنَأْتُه أَنا.',
+                'قسس': 'القَسُوس: الناقةُ التي ولَّى لبَنُها.',
+                'قتب': 'اقْتابَه: اخْتاره. والقَتِبُ: الضِّيِّقُ السَّرِيعُ الغَضَب.',
+                'فرص': 'الفَرص: نَوَى المُقْل، الواحِدةُ فرْصَةٌ.',
+                'قمقم': 'القِمْقِم: يابِسُ الرِّمَخِ.',
+                'قزح': 'القُزاحُ: مَرَضٌ يُصِيبُ الغَنَم.',
+                'قيد': 'قِيد الدَّقِيقُ: إذا طبِخَ وَتَكتَّلَ وتكَّبب.',
+                'قدر': 'القِدْرُ: رأْسُ الكَتِفِ الذي تَكُون فيه الوابِلةُ.',
+                'قوش': 'القَوَشُ: ما تَبْقَى من الكَرمِ بعدَ القِطافِ، كالقُواشَةِ.',
+                'قبق': 'القَبِقَةُ: التي صُوفُها لَبِدٌ.',
+                'قرمش': 'القَرَمَّشُ: الذي يأًكُلُ كُلَّ شَيءٍ.',
+                'قلخ': 'القَلْخُ: قَصَبٌ أَجْوَفْ خوّارٌ. وقَلَّخَ النَّبْتُ: إذا اشتدَّ عُودُه.',
+                'قنعب': 'القِنعْبُ: الرَّغِيبُ.',
+                'قرصطل': 'القِرِصْطالُ الغُبارُ.',
+                'كرضم': 'كَرْضَم: واجَه القِتال، وحَمَلَ على العَدُوِّ.',
+                'كلهس': 'وكذلك: كَلْهَسَ على العَدُوِّ.',
+                'كلأَ': 'اسْتَكْلأََ المكانً: صارَ في الكَلأُ.',
+                'كأَى': 'أَكَلْتُ قَلِيلاُ ثم أَكْأَيْتُ عنه، أَي كَرِهْتُه.',
+                'كدن': 'كَدَنَتْ لِقَطِيفَتِها أو ثَوبٍ غَيرِها، وهو أَنْ تَخِيطَ حَوْلَ مَرْكَبِها بثوبِ لتْسُتَرَهُ.',
+                'كزم': 'الكُزَم: النُّغَرُ.',
+                'كهد - كتع': 'الكَهْداءُ والكَتعاءُ: الأَمَةُ.',
+                'كنس': 'الكَنِيسَةُ: المَرْأَة الحَسناء.',
+                'كتع': 'كتَّع اللَّحْمَ كِتَعاً صِغاراً: قَطَّعَهُ.',
+                'كفر': 'الكُفْرُ دَقِيقُ النَّبات.',
+                'كرس': 'الكَرَوَّسُ من الجِمَال: العَظِيمُ الفَراسِنِ. والكِرْسُ: ما يُبْنَى لِطلْيانِ المِعْزَى مثلً بَيْتِ الحَمام.',
+                'كسع': 'الكُسْعَة: المَنِيحَةُ. والمُكْتَسَعَةُ: الشاةُ نُصِيبُها دابَّةُ يُقالُ لها بَرَصَةٌ.',
+                'كفن': 'هُمْ مُكْفِئون: ما لَهُمْ لَبَنُ ولا أُدْمً.',
+                'كمر': 'الكِمْرِيُّ: الغَنِيظُ.',
+                'كفل': 'وبات كافِلاً: إذا لم يُصِبْ غَداءً ولا عَشَاءً.',
+                'كفت': 'أَكَلَ خُبْزاً كَفْتاً، أَي بغَيْرِ إِدام.',
+                'كرش': 'التَّكْريِشَةُ: الذي يُطْبَخُ في الكَرِشِ.',
+                'كتب': 'المُكَتَّبُ العُنْقُودُ إذا أُكِلَ بعضُ ما فيه.',
+                'كعل': 'الكوْعَلةُ القارَةُ.',
+                'كمش': 'الأَكْمَش: القَصِيرُ القَدَمَيْنِ.',
+                'كلاً': 'الكَلَوءُ من الإِبِلِ: التي لا تَكادُ تَعْطِفُ على وَلَدِها ولاَ تَدُرُّ.',
+                'كلح': 'أَكْلَحَ الرَّجل، مل كلحَ.',
+                'كلد': 'اكْلَنْدَدَ: امْتَنَع.',
+                'كرب': 'الكَرَبةُ: الزِّرُّ، وهو الَّذِي يكونُ فيه رَأَسَ عَمُودِ البَيْتِ.',
+                'كسح': 'الكَسِحُ: الذي تسْتَعِينُه ولا يُعِينُك، يقالُ: ما أَكْسَحَه.',
+                'كعب': 'الكُعْبُ: الثَّديُ.',
+                'كلل': 'التَّكَلُّلُ: التَّقدُّم.',
+                'لحج': 'بِغْتُه بيعاً ليسَ فيه لُحَيْجاءُ، أَي ليس فيه مَثْنَويَّة.',
+                'لسع': 'اللُّسُوع: الشُّقُوق، كأَنَّها قَلْبُ السُّلُوع.',
+                'لفأَ': 'لَفَأْتُ الإِبِلَ:: عَدلْتُها عن وَجْهِهِا.',
+                'لحى': 'الْتَحَى إلى غَيْر قوْمِه: ادَّعَى.',
+                'ليث': 'وَطِئْتُ بَلَداً قدِ أَلاث شَجَرُه. واللَّيْثةُ من الإِبل: الشَّدِيدَةُ.',
+                'ليس': 'المُلاَيِس: البَطِيءُ. يقالُ: ما أَلْيَسَهُ، أَي ما أَبْطَأَه!.',
+                'لمص': 'لمَصْتُه أَلْمُصُهُ قَرَصْتُه.',
+                'لوى': 'اللِّوايةُ: عَصاً تَكونُ على فَمِ العِكْمِ. وتَلاَوَوْا عَلَيْهُ: اجْتَمَعُوا عليهِ ليَقْتُلُوه.',
+                'لبب': 'لَبَّبَ بالثَّوب: أَشارَ به.',
+                'لفف': 'أَتانَا بنو فُلانٍ ومنْ لَفّ لَفُّهُم. واللَّفُوفُ من الغَنم: الَّتِي يَذْبَحُها صاحِبُها وكان يرى أنها لا تنقي.',
+                'لخن': 'اللَّخِنَةُ: بَضْعَةٌ في أَسْفَل الكتِفِ عندَ نُغْضِها.',
+                'لمظ': 'يُقالُ للمَرْأَةِ النَّاسِجًةِ: أَلْمِظِي نَسِيجتَكِ، أَي أَصْفِقِيها.',
+                'لفث': 'اسْتَلْفَث حاجَتَهُ: قَضَاها.',
+                'لدد': 'الأَلَدُّ من الإِبل: الطَّوِيلُ الأَخْدَعِ.',
+                'لوط': 'اللَّوْطُ: الخَفيِفُ من الرِّجالِ المتَصرِّفُ.',
+                'لغب': 'لَغَبَ الكَلْبُ: وَلَغَ.',
+                'لخب': 'اللَّخَبُ: شجَر المُقْل.',
+                'لسن': 'المِلْسنُ: الحجَرُ الذي يُجْعَلُ على باب البْيِتِ الَّذِي يُبْنَى للضَّبُع.',
+                'لخم': 'اللُّخْمَةُ، واللَّهدُ من الرِّجالِ: الثَّقِيلُ الجْبُس.',
+                'مطمط': 'المِطْمِطُ: الصَّغِيرُ.',
+                'مشق': 'الموْشِقُ: قِرابُ السَّيفِ.',
+                'ملج': 'الأَمْلَجُ: القفْرُ الذي ليسَ فيه شيءٌ. ومَلَجَتِ النّاقَةُ: ذَهَبَ لبَنُها.',
+                'مخم': 'المَخِيمُ: أَنْ تجْمعَ العُهُودَ، أَي جِززَ الحَصِيدِ، والجمْعُ المُخُمُ.',
+                'محن': 'المَحْنُ: أن تَدْأَبَ يوْمَكَ أَجْمَعَ في المَشْي أَو غيرِه.',
+                'مرق': 'المُمْرِقُ من اللَّحْم: الذي يَشَكُّ فيه: هَلْ فيه دَسَمٌ أم لا؟.',
+                'مشر': 'أَذْهَبَهُب مَشَراً: إذا شَتَمَه، أَو هَجَاه، أَو سَمَّعَ به.',
+                'مرن': 'الْتَقَى القَوْمُ فكانَ لَهُم مَرِنٌ، أي صَخَبٌ، وقِتالٌ.',
+                'ميش': 'ماشُوا الأَرْضَ مْيشَةً: إذا مَرُّوا بها.',
+                'متن': 'المَتْنُ كالصَّدًد.',
+                'موص': 'المَوْصُ: الذُّعْرُ.',
+                'مرت': 'امْرِتْ هذه الإِبلَ، أَي نَحِّها.',
+                'ملط': 'إِبِلٌ ممَاليطُ: قد سَمِنَتْ وذَهبَتْ أَوْبارُها، وناقَةٌ مُمْلِطةٌ.',
+                'مضح': 'مضَحَت المَزادَةُ: رَشَحتْ.',
+                'مرز': 'المُمْتَرِزُ: الذي يَعْزِلُ مالَه عن شَرِيكهِ.',
+                'مدر': 'امْتَدَرْتُ: إذا احْتَفَرْتَ فَمَلأْتَ خَريطَتَك. والمُمَدَّةُ من الإِبل: السِّمانُ.',
+                'مأس': 'مَأَستْ حَفْلاً: إذا اشْتَدَّ حَفْلُها.',
+                'ملأَ': 'أَمْلئَُوا على أَمْرهِم الذي أَرادُوا، أي اتَّفَقُوا.',
+                'مجح': 'مجِحْتُ بذِكْرِ فُلان، أي بَجِحْتُ.',
+                'مرض': 'المِرْضُ: الزَّرْعُ إذا ديس ولم يُذَرَّ بعدُ.',
+                'مدش': 'رَجُلٌ مَدّاشُ اليَدِ: أَي سَارِقٌ.',
+                'متع': 'امْتَعْتُ عن فُلان: اسْتَغْنَيْتُ عنه.',
+                'منن': 'إِنَّه لَمُمِنٌّ: إذا كانَ يَلْزَمُ الشيءَ لا يُفارِقُه.',
+                'مدى': 'المَدَى: العَرْمَضُ.',
+                'معق': 'أَرضٌ مَعِيقَةٌ ليسَ بها أَحَدٌ. والإِمْعاقُ: أَن تَحْفِرَ سُفْلاً.',
+                'حجو': 'إِنَّه لمُحْجٍ: إذا كانَ شحِيحاً.',
+                'منى': 'التَّمانِي: أَنْ يُخْرِجَ هذا من أَصابِعِه ما شاءَ، والآخرُ مثلَ ذلك.',
+                'مقر': 'الامْتِقارُ: أَن تحْفِرَ الرَّكيَّةَ إذا نَزَحَ الماءُ منها وفَنِيَ.',
+                'ملد': 'مَلَدَه يَمْلُدُه: مَدَّه.',
+                'غرض': 'مَغْرِضُ الدَّبْرَة: مَفْجَرُ الماءِ من الجَدْوَلِ إليها.',
+                'مهج': 'مَهَجَها: نكَحَها. ومَهَجَها: رَضَعَها.',
+                'مصع': 'الماصِعُ: طَرَفُ اللَّحْيِ الأَعْلَى في الرَّأْسِ.',
+                'مسو': 'مَسَ الحِمارُ: حَرَنَ، فهو يَمْسُو.',
+                'مقه': 'الأَمْقَهُ: الذي لا نَبْتَ فيه ولا شَجَرَ.',
+                'بلص': 'البَلُوصُ: طائِرٌ، وهو البَلَصُوصُ.',
+                'مظع': 'تمَظَّعَ في الرِّعْيِ: إذا تَأَخَّرَ عن الوَقْتِ.',
+                'مسأ': 'مَسَأْتُ القِدْرَ: فَثَأْتُها.',
+                'مسس': 'المَسِيسُ حَبْلُ شِراعِ السَّفِينَة.',
+                'ملل': 'ناقَةٌ أُمُلّةٌ، وإِبلٌ أُمُلاتٌ، وهي الجِلَّةُ.',
+                'مجع': 'المُجّاعُ حَسْوٌ: رَقِيقٌ من الماءِ والطَّحِين.',
+                'مهو': 'أَلمَهْوُ: الرُّطَبُ. ومَهَوْهُ مَهْواً: جَلَدْوه جَلْداً شَدِيداً.',
+                'مكر': 'المَكْرةُ: التِي ليسَتْ، برُطَبةٍ ولا بُسْرًَةٍ، فيها لِينٌ.',
+                'مجج': 'المَجُّ: ما تَرَى من نُقَطِ العَسَلِ على الحِجارَةِ.',
+                'حور': 'المَحارَةُ ما بينَ النَّسْرِ إلى السُنْبُكِ.',
+                'ملث': 'التمَلُّث: التَّدَحِّي. والمُمالَثة: المُلاعَبَة.',
+                'مطل': 'المِطْلى الأَرْضُ اللَّيِّنَة.',
+                'نرج': 'النَّيْرَجُ: النّاقَةُ الجَوادُ. والنَّيْرَجُ: النَّمَّامُ.',
+                'نيع': 'النِّيعُ الذِي يُوأَكِلُ بينَ النّاسِ.',
+                'نسس': 'أَنَسَّهُ بالنّار: أَحرَقَه. ونَسَّسَ البَهْمَةَ: مَشّاها.',
+                'نبرج': 'النِّبْريجُ: الكَبْشُ يُخْصَى فلا يُجَزُّ له صُوفٌ أَبَداً.',
+                'نأَل': '[النَّأَلُ]: النَّقْلُ.',
+                'نسم': 'نَسِمَت الأَرْض نَسامَةٌ، أي نَزَّت.',
+                'نجث': 'النَّجيِثُ البَطِيءُ. وتَناجَثا: تَناثَّاً. وانْثَجَثَ انْتَفَخ.',
+                'نمى': 'النَّمِيَّةُ: نَصْلان من الغَزْل يُقابَلان فيُكَبّان.',
+                'نهى': 'النَّهِيَّةُ: التِي لا فَوْقَها فِي السِّمَنِ.',
+                'نأَف': 'نَأَفَ: جَدَّ، وهو مِنأَفٌ.',
+                'نقب': 'أَنْقُبْ لي خُفِّي، أي: ارْقَعْه.',
+                'نبر': 'النُّبَيْرُ من الرِّجال: الكَيِّسُ.',
+                'نصف': 'الناصفة: مثلُ نِصْفِ الوادِي يَكُونُ بها الثُّمام.',
+                'نشص': 'رأَيتُ نَشَاصَ جَوازٍ: إذا كُنَّ أَتْراباً. والنَّشِيصُ الَّذِي يُجعَلُ الخَمِيرُ فيه من العَجين.',
+                'نكل': 'النِّكْلُ: القِرْنُ.',
+                'نهب': 'المَنْهُوبُ: المَطْلُوبُ المُعْجَلُ.',
+                'نقش': 'المُنَقِّشَةُ: المُنَقِّلَةُ من الشِّجاج.',
+                'نكع': 'تَكَلَّمَ فأَنْكَعْتُهُ، أي نَغَّصْتُه. والإِنكاع: الإِعْوازُ.',
+                'نير': 'النِّيرُ: جانِبُ الطَّرِيقُ، وهو صَدْرُة.',
+                'نفح': 'نَفَّحْتُم لِمماً، وهو أَن يَهُزَّ شَعَره ويُحَرِّكَه.',
+                'نبن': 'عُنْقُودٌ مُنَبَّنٌ: إذا أُكِلَ بعضُ ما فيه من العِنَب.',
+                'نبل': 'نَبَلْتُ النَّخْلَة أَنْبِلُها: خَرَفْتُها. والنَّبِيلُ: الذي يُلْقَطُ من النَّخْلَةِ من الرُّطَب.',
+                'نذع': 'النَّاذِعُ من الماءِ أَو العَرَقِ: الخارجُ.',
+                'نشر': 'النَّشِيرُ: الزَّرْعُ إذا جُمِعَ وهُمْ لا يَكْدُسُونَه.',
+                'ندح': 'النَّدَحُ: سَنَدُ الجَبَل.',
+                'نقذ': 'النَّقِيذَةُ: المَرْأَةُ التي كانَ لَها زَوجٌ [قَبْلَه].',
+                'نتت': 'نَتَّتَ له الخَبَرَ، أي فَسَّرَه له.',
+                'نصع': 'أَنْصَعَ: اقْشَعَرَّ.',
+                'نغبق': 'المُنَغْبِقُ، والمُتَنَغْبِقُ: البَيْتُ الرِّخْو السِّماك.',
+                'نوط': 'النَّوْاطَةُ: البِئْرُ بينَ جَبَلَيْنِ. وأَناطَت الإِبلُ: أًصابَها وَرَمٌ في نُحُورِها.',
+                'نيط': 'يُقال: إِنِّي أُريدُ أَنْ اسْتَنِيطَكَ ناقَتِي: إذا دَفَعها إليهِ لِتَمتارَ له عَلَيها.',
+                'نحس': 'نَحَسَتْهُ الإِبلُ: عَنَّتْهُ وأَشْقَتْه.',
+                'نبغ': 'نَبِّغِي عَجينَك، أَي ذُرِّى عليه الطَّحيِنَ.',
+                'نبخ': 'النَّبَخُ: البَرْدِيُّ نفسُه يَجْعَلُونَه بينَ الَّلوحَيْن من أَلْواحِ السَّفِينَة.',
+                'نذذ': 'النَّذِيذُ: ما خَرَجَ من الأَنْفِ أَو الفَمِ.',
+                'نخخ': 'النُّخَّةُ: الرِّعاءُ.',
+                'خفس': 'تَخَفَّسَ: تَهَدَّمَ.',
+                'وصب': 'الوَصْبُ ما بينَ البِنْصَرِ إلى السَّبّابَةِ.',
+                'وتر': 'الوَتِيرَةُ: عَقدُ عَشَرَةٍ.',
+                'وكر': 'اتَّكَرَ الطائِرُ: اتَّخَذَ وَكْراً.',
+                'وقط': 'اسْتَوْقَطَ مكانُ كذا مِمَّا فيهِ مُسْتَنْقَع.',
+                'ورك': 'إِنَّه لمَوْرُوكٌ في هذِه الإِبِل، ليسَ له مِنْها شَيءٌ.',
+                'وقر': 'الوَقِرَةُ: الجَماعَةُ من الوَحْشِ.',
+                'ودد': 'لَوَدِّ زَيْدِ أَنْ يَكُونَ كذا وكَذا، وأَمَا واللهِ لَوَدِّهِ.',
+                'وجر': 'الوَجَرَةُ: النُّقْرَةُ التي يَنْصَبُّ عليها الماءُ مِنْ فَوْقُ فيَحفِرُها.',
+                'وظر': 'الوَظِرُ مِنَ الرِّجال المَلآْنُ الفَخَذَيْنِ والبَطْنِ من الَّلحْمِ.',
+                'وفل': 'دَبَغَ الدَّلْوَ والسِّقاءَ حَتِّى ذَهَبَ وَفْلُهما. والوَفِلُ: إذا طاحَ الحَصِيصُ.',
+                'وغض': 'وَغَّضْتُ في الإِناءِ تَوْغيِضاً: إذا دَحَسْتَه.',
+                'ولج': 'الوالِجَةُ: الدُّبَيْلَة، والرَّجُلُ مَوْلُوجٌ.',
+                'وكس': 'التَّوْكِيِسُ: التَّوْبيخُ.',
+                'وعى': 'الوَعايَةُ: الحِفْظُ.',
+                'وزق': 'هو مُسْتَوْزَقٌ عليه: إذا لم يَسْتَطِع البَرازَ.',
+                'وجم - وجن': 'المِيجَمَةُ: الكُذِينُ، كالمِيجَنَةِ.',
+                'وكع': 'المِيكَعَةُ: المِيجَنَةُ.',
+                'وجب': 'المُوَجَّبُ من النُّوق: التي يَنْعَقِدُ الِّلَبأ في ضَرْعِها، كالوَجْبِ.',
+                'وظف': 'الوَظِيفُ من الرِّجال: الَّذِي يَقْوَى على المَشْيِ في الحَزْنِ.',
+                'وبل': 'المَوْبِل: الأَمْعَزُ الشَّديدُ.',
+                'وفْع': 'الوَفْعُ: السَّحابُ المُطْمِعُ.',
+                'وحف': 'المَوْحِفُ: الذي ليس له ذَرىً.',
+                'وثغ': 'المَوْثُوغَةُ: المُدأَبَةُ في العَمَل.',
+                'هجج': 'تَهَجَّجَتِ النّاقَةُ إذا دَنَا نِتاجُها. وهَجَّه: هَدَمَه.',
+                'هوم - هيم': 'هُمْتُ به هُواماً، أَي هِمْتُ هِياماً.',
+                'هزرف': 'الهِزْرِفَةُ، والهِزْرَوْفَةُ: النّابُ الكَبِيرةُ، والعَجُوز.',
+                'هرمس': 'الِرْمَوْسُ: الصُّلْبُ الرّأْي، الدّاهِيَةُ المُجَرِّبُ.',
+                'هرع': 'ظَلَّ يَهْرَعُ في الحَشِيش: يَرْعاه.',
+                'همهم': 'الهَمْهامَةُ، والهُمْهُومَةُ: العَكَرَةُ العَظِيمَةُ.',
+                'هرو': 'الهُريُّ: جمعُ الهِراوَةِ.',
+                'هجر': 'الأُهْجُوَرةُ: العادَةُ.',
+                'يوم': 'بِنْتُ يَومٍ الأَفْعَى، أي: لا يَلْبَثُ الذي تَنْهشُه إلاَّ يوماً.',
+                'يقظ': 'اليِقاظُ: الأَيْقاظُ.',
+                'يلب': 'اليَلَبُ: العَظِيم، في لُغة كَلْب.',
+                'بجر': 'تَياجَرَ عَنْه: عَدَل عنه.',
+                'يفن': 'اليُفْنُ: [الثِّيرانُ الجلَّة] : جمعُ اليَفَن.',
+                'نسك': 'رجلٌ مَنْسَكَة: كثيرُ النُّسُكِ.',
+                'دنفس': 'الدِّنْفِسُ الحَمْقاءُ، كالدِّفْنِس.',
+                'هيت': 'هَيْتُ لَكَ، وهَاتالَكَ، مثل: هَيْتَ لَك.',
+                'حود': 'حادَ يَحُودُ: لغةٌ في يَحيِدُ.',
+                'حلب - ركب': 'ناقَةٌ حَلْبَي رَكْبيَ، وحَلَبُوتَي رَكَبُوتَي: تصلح للحَلْب والرُّكُوبِ.',
+                'ضرع': 'الضَّرِيعُ، والجَلْسُ، والسَّوِيقُ: الخَمْرُ.',
+                'لتن': 'الُّلتُنَّةُ: القُنْفُذ.',
+                'عزر': 'العَزْوَرُ: الدَّيُّوثُ.',
+                'جردب': 'الجَرْدَبِيُّ: الجَرْدَبانُ.',
+                'صنى': 'الصُّنْيانُ: لغة في الصِّنوان والصِّنْيان.',
+                'قنى': 'القُنْيانُ: لغة في القِنْوان والقُنْوان.',
+                'صنبر': 'الصُّنْبُور: الصَّبِيُّ الصَّغِيرُ.',
+                'ذوف': 'الذَّوْفانُ: السُّمُّ.',
+                'سمم': 'السِّمُّ: لغةٌ في السّمِّ، والسُّمِّ، للمَشْرُوب.',
+                'عذفر': 'تَعَذْفَرَ: تَغضَّبَ.',
+                'علفت': 'رجُل عِلْفَوْتٌ وعُلْفُوتٌ، وعَلْفَتانِيٌّ: يرِمي بالكَلامِ على عَواهِنِه من حَماقَتِه.',
+                'سلح': 'السُّلحُ: رُبٌّ يُدْلَكُ به نِحْيُ السَّمْنِ، لتَنْسَدَّ الخُرَزُ.',
+                'فسد': 'الفُسُود: الفَسادُ.',
+                'قطبر': 'قَطابرُ: موضعٌ باليَمَن.',
+                'ندس': 'النَّدُوسُ: الناقَةُ التي تَرْضَى بأَدْنَى مَرْتَعٍ.',
+                'جفلق': 'الجَفْلَقَةُ: الرُّكُوب.',
+                'قرش': 'القِرْواشُ: العَظِيمُ الرأُسِ.',
+                'شكى': 'شَكَيْتُ: لغةٌ في شَكَوْتُ.',
+                'شرط': 'ذَبِيحَةُ الشَّريطَةِ: هي أَنَّهُم كانُوا يَشرطُونَها من العِلَّة.',
+                'نشور': 'الفعل من نِشْوارِ الدابَّة: نَشْوَرَت نَشْوَرَةً ونِشْواراً.',
+                'شرى': 'شَرَّيتُ الَّلحْمَ، والثَّوْبَ، والأَقِطَ، مثل شَرَّرْتُها، وشَرَرْتُها، وأَشْرَرْتُها.',
+                'رأَى': 'أَتَيْتُه حِينَ جَنًّ رُؤْىٌ رُؤْياً - ورأْىٌ رأْياً - أي اخْتَلَط الظلام.',
+                'شدد': 'الأُشُدُّ: لغةٌ في الأشُدّ.',
+                'ذمأَ': 'ذَمأَ عليه: شَقَّ عليه.',
+                'قرسق': 'الفِرْسِقُ: لغة في الفِرْسِك، وهو الخَوْخُ.',
+                'قبأَ': 'قَبَأْتُ الطَّعامَ: أَكَلْتُه.'
+                
             }), []);
 
             const searchResults = useMemo(() => {
@@ -367,6 +601,7 @@
 </body>
 </html>
 ```
+
 
 
 
